fix(beadspace): exclude in_progress from blocked count in donut chart
The blocked filter included in_progress issues that had open blockers,
causing them to be double-counted in both WIP and Blocked categories.
This made donut segments exceed 100% and stat card numbers not sum
to the total. Now consistent with effectiveStatus() priority ordering.

--- a/.beadspace/index.html
+++ b/.beadspace/index.html
@@ -640,7 +640,7 @@ function triageSuggestions() {
 function renderDashboard() {
   const open = ISSUES.filter(i => i.status !== 'closed');
   const openReady = open.filter(i => !blockedSet.has(i.id) && i.status === 'open');
-  const blocked = ISSUES.filter(i => blockedSet.has(i.id));
+  const blocked = ISSUES.filter(i => blockedSet.has(i.id) && i.status !== 'in_progress');
   const wip = ISSUES.filter(i => i.status === 'in_progress');
   const closed = ISSUES.filter(i => i.status === 'closed');
   const total = ISSUES.length;
